# app/Http/Requests/Company/ResetPasswordRequest.php
@@ -1,0 +1,60 @@
+<?php
+
+namespace App\Http\Requests\Company;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Contracts\Validation\Validator;
+use Symfony\Component\HttpFoundation\Response;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class ResetPasswordRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => ['required', 'email', 'exists:companies,email'],
+            'password' => ['required', 'string', 'min:8', 'confirmed'],
+            'otp' => ['required', 'string', 'exists:password_reset_tokens,token'],
+        ];
+    }
+
+    public function messages(): array
+    {
+        return [
+            'email.required' => 'The email field is required.',
+            'email.email' => 'The email must be a valid email address.',
+            'email.exists' => 'The email address is not registered.',
+            'password.required' => 'The password field is required.',
+            'password.string' => 'The password must be a string.',
+            'password.min' => 'The password must be at least 8 characters.',
+            'password.confirmed' => 'The password confirmation does not match.',
+            'token.required' => 'The token field is required.',
+            'token.string' => 'The token must be a string.',
+            'token.exists' => 'The token is invalid.',
+        ];
+    }
+
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(
+            response()->json([
+                'success' => false,
+                'message' =>  implode(', ', $validator->errors()->all()),
+                'errors' => $validator->errors()->all(),
+            ], Response::HTTP_UNPROCESSABLE_ENTITY)
+        );
+    }
+}
